Mon Jan  7 12:38:47 2002  Tanaka Akira  <akr@m17n.org>

        * lib/time.rb (Time#xmlschema): new optional argument 
	fractional_seconds to specify a number of digits of
	fractional part of the time.

Sat Jan  5 00:19:12 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yycompile): strdup()'ed twice.

Fri Jan  4 17:23:49 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* misc/ruby-mode.el (ruby-forward-string): forward a string. [new]

	* misc/ruby-mode.el (ruby-parse-region): handle nested parentheses
	  in a string and terminators in #{}.

	* misc/ruby-mode.el (ruby-calculate-indent): ditto.

Wed Jan  2 23:34:25 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): add -I. to CPPFLAGS.

	* lib/mkmf.rb (create_makefile): srcdir support(.def and depend file).

Wed Jan  2 11:51:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_f_system): abandon vfork.

	* io.c (pipe_open): ditto.

Tue Jan  1 02:16:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* Makefile.in (fake.rb): set RUBY_VERSION.

Mon Dec 31 14:20:46 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yycompile): always store copy of filename.

	* parse.y (rb_compile_file): no longer need to strdup() here.

Mon Dec 31 05:26:40 2001  Ferris McCormick  <fmccor@inforead.com>

	* defines.h: sparc linux needs different FLUSH_REGISTER_WINDOWS

Sun Dec 30 18:04:07 2001  Tanaka Akira  <akr@m17n.org>

	* time.c (time_utc_offset): new function.

	* time.c (Init_Time): new method gmtoff, gmt_offset and utc_offset.

	* lib/time.rb: new file.

Sun Dec 30 00:59:16 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in, lib/mkmf.rb (have_library): accept -lm
	  unconditionally on mswin32/mingw32.

Sat Dec 29 01:55:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_search): abandon stclass optimization.

Thu Dec 27 18:43:04 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* bignum.c (rb_cstr2inum): deny "0_".
