@@ -54,6 +54,9 @@ VALUE
 rb_str_new2(ptr)
     const char *ptr;
 {
+    if (!ptr) {
+	rb_raise(rb_eArgError, "NULL pointer given");
+    }
     return rb_str_new(ptr, strlen(ptr));
 }
 
